--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_c02_2019.Rnw
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_c02_2019.Rnw
@@ -9,7 +9,7 @@
 \SweaveOpts{concordance=TRUE, echo=FALSE, eval=TRUE}
 
 		
-\chapter{Aula 2 - Acessando e Utilizando Bases de Dados}
+\chapter{Acessando e Utilizando Bases de Dados}
 
 Apresentar o conceito de Dataframe, os tipos de dados utilizados no R e os principais comandos  
 
