--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_intro_2019.Rnw
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_intro_2019.Rnw
@@ -8,7 +8,7 @@
 % !Rnw root = BP_Curso_TecComp_00_2019.Rnw
 \SweaveOpts{concordance=TRUE, echo=FALSE, eval=TRUE}
 
-\chapter*{Introdução}
+\chapter{Introdução}
 
 O R é uma suíte integrada de software que permite a recuperação, o tratamento, e a análise de dados\cite{Venables2011}. Pode se dizer que o R é um ambiente de tratamento de dados que permite ao usuário, além a análise de dados propriamente dita, escrever extensões e ampliar o seu escopo.
 
