--- a/curso_intro_datascience/Apostilas/UFPA_Curso_TecComp_00_2019.Rnw
+++ b/curso_intro_datascience/Apostilas/UFPA_Curso_TecComp_00_2019.Rnw
@@ -29,14 +29,12 @@
 
 \title{Introdução ao Tratamento e Análise de Dados em R}
 
-%\subtitle{Assessments and Report from Socioeconomic and Demographic Data in \\
-%	      Small Cities in Amazon Delta}
 
 \subtitle{ou Data Science para todos!}
 
 \date{\today}
 
-\author{S.~Rivero \and H.~Farias}
+\author{Sérgio Rivero \and Hilder Farias}
 
 \affiliation{Programa de Pós-Graduação em Economia\\
   Instituto de Ciências Sociais Aplicadas\\
@@ -44,7 +42,7 @@
   Rua Augusto Correia, 1\\
   Belém, Pará - 66.075-200}
 
-\author{Equipe Eco\_S }
+\author{Murilo Gomes, Lais Conte  \and Erwin Braga }
 
 
 \affiliation{Faculdade de Economia \\
@@ -129,6 +127,10 @@ library(knitr)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\SweaveInput{BP_Curso_TecComp_00_c04_2019.Rnw}
+
+
+
 \SweaveInput{BP_Curso_TecComp_00_c02_2019.Rnw}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -145,13 +147,15 @@ library(knitr)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\SweaveInput{BP_Curso_TecComp_00_c04_2019.Rnw}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %    CAPITULO 5
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\SweaveInput{BP_Curso_TecComp_00_c06_2019.Rnw}
+
 
 \SweaveInput{BP_Curso_TecComp_00_c05_2019.Rnw}
 
@@ -161,7 +165,6 @@ library(knitr)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\SweaveInput{BP_Curso_TecComp_00_c06_2019.Rnw}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -169,7 +172,7 @@ library(knitr)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\SweaveInput{BP_Curso_TecComp_00_c07_2019.Rnw}
+%\SweaveInput{BP_Curso_TecComp_00_c07_2019.Rnw}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -177,7 +180,7 @@ library(knitr)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\SweaveInput{BP_Curso_TecComp_00_c08_2019.Rnw}
+%\SweaveInput{BP_Curso_TecComp_00_c08_2019.Rnw}
 
 \chapter{Onde aprender mais?}
 
