--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_c06_2019.Rnw
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_c06_2019.Rnw
@@ -9,7 +9,7 @@
 \SweaveOpts{concordance=TRUE, echo=FALSE, eval=TRUE}
 
 
-\chapter{Aula 6 - Apresentando Resultados}
+\chapter{Gráficos em R}
 
 	\section{ggplot}
 	O pacote \textbf{ggplot2} é uma ferramenta de visualização gráfica bastante útil para apresentação de dados com muitos componentes. A estrutura de construção de gráficos utilizando o ggplot2 é basicamente definir os dados a serem plotados e o sistema de coordenadas. Uma boa forma de entender como funciona o \textbf{ggplot2} é por meio da metáfora de camadas. Cada detalhe do gráfico é uma camada de comando definido a partir das camadas principais(dados e coordenadas).
@@ -45,7 +45,7 @@ Para os exemplos do pacote \textbf{ggplot2} utilizaremos o dataset Iris. Essa ba
 	\item [Species:] Espécias da plantas. 
 \end{description}
 
-<<eval=false, echo=TRUE>>=
+<<eval=TRUE, echo=TRUE>>=
 data("iris")
 head(iris)
 @
@@ -64,7 +64,7 @@ O primeiro gráfico apresentará a relação entre o comprimento da pétala e da
 
 Os comandos para gerar o gráfico são:
 
-<<eval=false, echo=TRUE>>=
+<<eval=FALSE,echo=TRUE>>=
 g1 <- ggplot(iris, aes(x = Sepal.Length, y = Petal.Length)) + 
 geom_point() +
 ggtitle("Relação entre tamanho da Pétala e o tamanho da Sépala") +
@@ -74,20 +74,20 @@ plot(g1)
 
 O objeto \textbf{g1} recebe a função que trata do acesso a base aos dados \textbf{iris} e a definição da posição das variáveis. Tal função está descrita abaixo:
 
-<<eval=false, echo=true>>=
+<<eval=FALSE,echo=TRUE>>=
 g1 <- ggplot(iris, aes(x = Sepal.Length, y = Petal.Length))
 #iris indica a base de dados e aes() indica a posição das variáveis
 @
 
  próxima camada indica qual é a geometria do gráfico. Tal função é dada por:
 
-<<eval=false, echo=TRUE>>=
+<<eval=FALSE,echo=TRUE>>=
 geom_point()
 @
 
 As próximas camadas apresentam apenas títulos e legendas presentes nos gráficos, além da função plot para apresentar o gráfico na região de plot do \textbf{Rstudio}
 
-<<eval=false, echo=true>>=
+<<eval=FALSE,echo=TRUE>>=
 ggtitle("Relação entre tamanho da Pétala e o tamanho da Sépala") +
 labs(x="Tamanho da Sépala", y="Tamanho da Pétala")
 plot(g1)
@@ -104,7 +104,7 @@ plot(g1)
 
 Para fazer o gráfico da figura \ref{fig:f06-05} podemos utilizar os comandos abaixo:
 
-<<eval=false, echo=true>>=
+<<eval=FALSE,echo=TRUE>>=
 g2 <- ggplot(iris, aes(x = Sepal.Length, y = Petal.Length)) + 
 geom_point() +
 geom_smooth() +
@@ -122,11 +122,10 @@ Podemos fazer uma separação por variáveis categóricas e apresentá-las com c
 	\label{fig:f06-06}
 \end{figure}
 
-\newpage
 
 O exemplo para construir a figura \ref{fig:f06-06} está exemplificado abaixo:
 
-<<eval= false, echo=true>>=
+<<eval= FALSE, echo=TRUE>>=
 g3 <- ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width, color = Species)) + 
 geom_point() +
 ggtitle("Relação entre comprimento e largura das sépalas por espécie") +
@@ -145,7 +144,7 @@ Podemos incluir mais uma camada e criar vários ambientes de plot dividindo o am
 
 O código para gerar o gráfico da figura \ref{fig:f06-07} está exposto abaixo:
 
-<<eval=false, echo=true>>=
+<<eval=FALSE,echo=TRUE>>=
 gf4 <- ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width, color = Species)) + 
 geom_point() +
 facet_wrap(~Species) +
@@ -154,7 +153,7 @@ labs(x="Comprimento da Sépala", y="Largura da Sépala", color = "Espécie")
 plot(gf4)
 @
 
-\newpagess
+\newpage
 
 Percebam que na figura \ref{fig:f06-07} utilizamos a mesma variável para o parâmetro \textbf{color} e para o parâmetro \textbf{facet\_wrap}. Em um novo exemplo usando a base de dados \textbf{mpg}, utilizaremos os dois parâmetros citados anteriormente, mas com variáveis distintas para cada um.
 
@@ -169,4 +168,163 @@ O código que gera a figura \ref{fig:f06-08} está escrito abaixo:
 
 
 
-	\section{shiny}
+\section{Shiny}
+
+O \textit{shiny} é um pacote R que facilita a criação de aplicativos interativos com uma interface web Web direto do R.
+
+Para baixar o \textit{shiny} usamos nosso velho conhecido \textit{install.packages()}
+
+<<eval=FALSE,echo=TRUE>>=
+
+install.packages('shiny')
+
+@
+
+
+\subsection{Estrutura de um aplicativo \textit{shiny}}
+
+Esta seção está fortemente baseada na \textit{cheat sheet} do \textit{shiny} publicada em  \url{https://shiny.rstudio.com/images/shiny-cheatsheet.pdf}
+
+Aplicativos \textit{shiny} estão contidos em um único script chamado app.R. O script app.R reside em um diretório (por exemplo, newdir/) e o aplicativo pode ser executado com runApp("newdir").
+
+
+app.R tem três componentes:
+
+\begin{enumerate}
+	\item um objeto de interface do usuário
+	
+	\item uma função de servidor
+	
+	\item uma chamada para a função shinyApp
+	
+\end{enumerate}
+
+O objeto \textit{ui} da interface com o usuário controla o layout e a aparência do seu aplicativo. A função \textit{server} contém as instruções que seu computador precisa para criar seu aplicativo. Finalmente, a função \textit{shinyApp} cria objetos do \textit{shiny} a partir de um par de interface do usuário/servidor explícito.
+
+O objeto de interface de usuário e a função servidor podem tanto estar em dois arquivos ("ui.R" e "server.R") quanto em um arquivo único. Utilizando um arquivo único permite um compartilhamento muito mais simples do código escrito em \textit{shiny}.
+
+
+\begin{figure}[htpb]
+	\centering
+	\includegraphics[width=\linewidth]{../figs/BP_Curso_TecComp_00_2019_f06-09}
+	\caption{Estrutura de um arquivo de aplicação shiny}
+	\label{fig:bpcursoteccomp002019f06-09}
+\end{figure}
+
+Um arquivo de aplicação em \textit{shiny}, então, conterá 3 partes (Figura \ref{fig:bpcursoteccomp002019f06-09}). Uma primeira parte é a descrição  da estrutura da página a ser publicada, bem como com os elementos da interface do usuário (ui). Este componentes terão os elementos de entrada e também indicarão onde ficariam os gráficos, tabelas e textos que resultariam nas \textbf{reações} as mudanças nos valores que estiverem conectados com estas saídas. 
+
+\begin{figure}[htpb]
+	\centering
+	\includegraphics[width=\linewidth]{../figs/BP_Curso_TecComp_00_2019_f06-10}
+	\caption{Entrada, servidor e aplicação em detalhe}
+	\label{fig:bpcursoteccomp002019f06-10}
+\end{figure}
+
+
+A segunda parte é a descrição das ações que ocorrem quando há uma mudança nos valores observados e quais as funções específicas serão utilizadas. Nesta segunda parte também é incluída a estratégia de renderização dos resultados (Figura \ref{fig:bpcursoteccomp002019f06-10}).
+
+
+
+
+\subsection{Layouts do shiny}
+
+A interface de usuário do shiny permite uma quantidade razoável de opções de layout, podendo também combinar conjuntos diferentes de elementos em entradas únicas. Abaixo (Figura \ref{fig:bpcursoteccomp002019f06-13}) vemos o exemplo de um painel com um campo de entrada tipo data e um botão para incluir o valor da variável.
+ 
+\begin{figure}[htpb]
+	\centering
+	\includegraphics[width=0.7\linewidth]{../figs/BP_Curso_TecComp_00_2019_f06-13}
+	\caption{Um painel composto e as diversas funções de painéis compostos}
+	\label{fig:bpcursoteccomp002019f06-13}
+\end{figure}
+
+Na definição da interface, ao utilizarmos a função \textit{fluidPage()} (Figura \ref{fig:bpcursoteccomp002019f06-14} podemos montar um conjunto grande de layouts com uma flexibilidade que permite diversos padrões de distribuição das informações na sua home page gerada pelo \textit{shiny}. 
+
+\begin{figure}[htpb]
+	\centering
+	\includegraphics[width=0.7\linewidth]{../figs/BP_Curso_TecComp_00_2019_f06-14}
+	\caption{Exemplo da função fluidRow()}
+	\label{fig:bpcursoteccomp002019f06-14}
+\end{figure}
+
+A figura \ref{fig:bpcursoteccomp002019f06-14} mostra um exemplo da função \textit{fluidRow()} com duas linhas e duas colunas de tamanhos diferentes dentro do layout de uma página.
+
+\begin{figure}[htpb]
+	\centering
+	\includegraphics[width=0.7\linewidth]{../figs/BP_Curso_TecComp_00_2019_f06-15}
+	\caption{Exemplo da função flowLayout()}
+	\label{fig:bpcursoteccomp002019f06-15}
+\end{figure}
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{../figs/BP_Curso_TecComp_00_2019_f06-16}
+	\caption{}
+	\label{fig:bpcursoteccomp002019f06-16}
+\end{figure}
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{../figs/BP_Curso_TecComp_00_2019_f06-17}
+	\caption{}
+	\label{fig:bpcursoteccomp002019f06-17}
+\end{figure}
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{../figs/BP_Curso_TecComp_00_2019_f06-18}
+	\caption{}
+	\label{fig:bpcursoteccomp002019f06-18}
+\end{figure}
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{../figs/BP_Curso_TecComp_00_2019_f06-19}
+	\caption{}
+	\label{fig:bpcursoteccomp002019f06-19}
+\end{figure}
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{../figs/BP_Curso_TecComp_00_2019_f06-11}
+	\caption{Tipos de entradas}
+	\label{fig:bpcursoteccomp002019f06-11}
+\end{figure}
+
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{../figs/BP_Curso_TecComp_00_2019_f06-12}
+	\caption{Tipos de Entradas (cont.)}
+	\label{fig:bpcursoteccomp002019f06-12}
+\end{figure}
+
+
+
+\subsection{Alguns links úteis}
+
+
+	\url{https://shiny.rstudio.com/tutorial/written-tutorial/lesson1/}
+	
+	\url{https://shiny.rstudio.com/}
+	
+	\url{http://material.curso-r.com/shiny/}
+	
+	\url{https://www.rstudio.com/products/shiny/shiny-user-showcase/}
+	
+	\url{https://www.showmeshiny.com/category/topics/finance/}
+	
+	\url{https://shiny.rstudio.com/images/shiny-cheatsheet.pdf}
+	
+	\url{https://www.rstudio.com/wp-content/uploads/2015/02/shiny-cheatsheet.pdf}
+	
+	
+	
+	
+
+
